--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,17 @@
   <artifactId>Lite2Edit</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <build>
+     <resources>
+         <resource>
+             <directory>src/main/resources</directory>
+             <filtering>true</filtering>
+         </resource>
+     </resources>
      <plugins>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
+             <version>3.3</version>
              <configuration>
                  <source>1.8</source>
                  <target>1.8</target>
